cross browser fixes, privacy policy footer alignment

--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -57,11 +57,16 @@
     .hero {
       &-callout {
         position: sticky;
-        font-size: clamp(4em, 10vw, 10em);
+        // font-size: 4em;
+        font-size: 16vw;
         line-height: 1.15;
         margin-left: 0.8em;
         padding: 1em 0;
         top: 0;
+
+        @media (min-width: $breakpoint-lg) {
+          font-size: 10em;
+        }
       }
       &-images {
         img {
@@ -106,7 +111,7 @@
     }
     .headline {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
 
       > .inner {
         margin: 4em 2em 2em;
